--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,6 +29,9 @@ h11 = "^0.14.0"
 certifi = "^2025.7.9"
 charset-normalizer = "^3.4.2"
 
+[tool.poetry.dev-dependencies]
+markupsafe = "^2.1.3"
+
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
