--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,6 +28,10 @@ click = "^8.1.7"
 h11 = "^0.14.0"
 certifi = "^2025.7.9"
 charset-normalizer = "^3.4.2"
+python-dotenv = "^1.1.1"
+colorama = "^0.4.6"
+httpx = "^0.27.2"
+httpcore = "^1.0.7"
 
 [tool.poetry.dev-dependencies]
 markupsafe = "^2.1.3"
